--- a/css/styles.css
+++ b/css/styles.css
@@ -4,14 +4,20 @@ body
 }
 
 
-#menu  {
+colonneGauche  {
 	float:left;
 	width:15%;
 	font-size: 10pt;
 }
 	
+menulist {
+	color:red;
+}	
+elementsmenulist {
+	color:red;
+}
 	
-#contenu {
+colonneDroite {
 	margin:20px auto;
 	position:relative;
 	height:600px;
@@ -19,14 +25,51 @@ body
 	font-size: 10pt;
 }
 
-#nom {
+nom {
 	width:100%;
 	font-size: 14pt;
 }
-#Stat_Image_Base64 {
+date_maj_web {
 	width:40%;
 }
-#Stat_Tableau {
+repertoire {
+	width:40%;
+}
+Stat_Image_Base64 {
+	width:40%;
+}
+Stat_Tableau {
 	width:60%;
 }
+listepisodes{
+	width:60%;
+}
+lstEp{
+	width:60%;
+}
+elementslstEp {
+	color:red;
+}
+elementslstEpnum_saison {
+	color:red;
+}
+elementslstEpnum_episodes {
+	color:red;
+}
+elementslstEpsequentiel {
+	color:red;
+}
+elementslstEpnom {
+	color:red;
+}
+elementslstEpairdate {
+	color:red;
+}
+elementslstEpencours {
+	color:red;
+}
+elementslstEptimestamp_completer {
+	color:red;
+}
 
+	
